# node

./: .dockerignore  .env.example  .env.example-docker  .gitignore  .gitmodules  Dockerfile  Dockerfile-celery  Dockerfile-node  Dockerfile-node-dev  Dockerfile-ollama  Dockerfile.linux  Dockerfile.linux-cpu  Dockerfile.linux-gpu  Dockerfile.macos  LICENSE  Makefile  README.md  buildx.Dockerfile  celery.Dockerfile  celery_worker_start.sh  celery_worker_start_docker.sh  clean_pyproject.py  cli.py  docker-compose.base.yml  docker-compose.development.yml  docker-compose.ollama-cpu.yml  docker-compose.ollama-cuda.yml  docker-compose.ollama.yml  docker-compose.script.yml  docker-compose.single-gpu.yml  docker-compose.template.env  docker-compose.vllm.yml  docker-compose.vllm2.yml  docker-compose.yml  entrypoint.sh  environment.yml  init_llm.py  init_rabbitmq.sh  kyle_test_build.sh  launch-linux.sh  (+16 more)
.github/workflows/: build-node-contaier.yml  build-node-container.yml  build.yml  deploy.yml
READMEs/: advanced.md  docker.md  systemd.md
docker-utils/: .dockerignore  init_llm.py  init_postgres.sh  install-erlang-ubuntu.sh  start.sh  supervisord copy.conf  supervisord.conf
dockers/: Dockerfile.celery  Dockerfile.node  docker-compose-node.yml
docs/: docker.md  systemd.md
nbs/: daimon.code-workspace  db.py  docker.ipynb  docker_test.py  node.ipynb  node_check.ipynb  ollama.ipynb  surrealdb.ipynb  testing_sdb.ipynb
node/: agent_manager.py  client.py  config.py  grpc_pool_manager.py  main.py  module_manager.py  nodes.py  payments.py  schemas.py  secret.py  user.py  utils.py
node/celery_worker/: celery_utils.py  celery_worker.py  docker_manager.py  executor.py  subprocess_manager.py  template_manager.py  utils.py
node/comms/: orchestration.py  storage.py  task.py  user.py
node/compose-files/: hub.yml  litellm.yml  ollama.yml
node/inference/: README.md  TEMPLATE.env  cluster-2.docker-compose.yml  server.py  single-gpu.docker-compose.yml
node/litellm/: generate_litellm_config.py  litellm_config.vllm.yml  litellm_config.yaml  pyproject.toml
node/ollama/: init_ollama.py
node/routes/: orchestration.py  storage.py  task.py  (+1 more)
scripts/: generate_user.py  init.sh  init.sql  reset_db.py
tests/: README.md  grpc_direct.py  http_direct.py  http_grpc.py  http_ws.py  node_check.ipynb  test-db.py  test-http-db.py  test_tool_endpoints.py  ws_direct.py
(+149 files in other folders)
