[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "node"
version = "0.1.0"
description = ""
authors = [ "moarshy <marshath@gmail.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "node"
from = "."

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiofiles = "^23.2.1"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"
fastapi = "0.112.2"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
backoff = "^2.2.1"
docker = "^7.0.0"
celery = "^5.4.0"
redis = "^5.0.1"
surrealdb = "^0.3.2"
pyjwt = "^2.8.0"
psutil = "^5.9.7"
pytz = "^2024.1"
gitpython = "^3.1.40"
poetry-core = "^1.8.1"
poetry = "^1.7.1"
setuptools = "^69.0.3"
pyyaml = "^6.0.1"
protobuf = "^5.26.1"
ecdsa = "^0.19.0"
ipfshttpclient = "^0.7.0"
grpcio = "^1.66.2"
grpcio-tools = "^1.66.2"
charset-normalizer = "3.3.2"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
aiohttp = "^3.11.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
ipykernel = "^6.29.2"
