[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "litellm-node"
version = "0.1.0"
description = ""
authors = [ "moarshy <marshath@gmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
litellm = {extras = ["proxy"], version = "1.54.0"}